--- a/index.html
+++ b/index.html
@@ -485,11 +485,11 @@
                 ><i class="fa-solid fa-code"></i
               ></a>
             </div>
-            <a
-              href="https://drive.google.com/file/d/1N4ZWhIPClZo4mV8cH3n8UhdMyzrjNlph/view?usp=sharing"
+<!--             <a
+              href="resumelink"
               class="btn btn2"
               >Resume</a
-            >
+            > -->
           </div>
           <div class="contact-right">
             <form name="submit-to-google-sheet">
