--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#contact">Contact</a></li>
             <!-- <li>
               <a
-                href="https://drive.google.com/file/d/1pBossN7JYck1Qmvgv_dgv_5lxVTFFeRw/view"
+                href="resumelink"
                 >Resume</a
               >
             </li> --> 
