--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="tab-contents" id="education">
               <ul>
                 <li>
-                  <span>B.Tech(EE), NIT Surat , 2021-25</span><br />CGPA - 8.35
+                  <span>B.Tech(EE), NIT Surat , 2021-25</span><br />CGPA - 8.36
                   
                 </li>
                 <li>
@@ -152,8 +152,8 @@
                   <span>Amazon</span><br /><i>Manager - I Intern</i>
                   <br />
                   <ul class="intern">
-                    <li>Managing a team of 180+ in the Outbound Department, consistently driving performance to an average of 101% against plan.</li>
-                    <li>Collaborating with cross-functional teams and utilizing data analysis to enhance key quality metrics, achieving a 30% improvement target by March 2025.</li>
+                    <li>Managed a team of 180+ in the Outbound Department, improving performance metrics by 9%.</li>
+                    <li>Collaborated with cross-functional teams and leveraged data analysis to improve key quality metrics, achieving a 50% improvement and reduced cost-related losses by 44%. </li>
                   </ul>
                 </li>
 
